--- a/src/styles/app.postcss
+++ b/src/styles/app.postcss
@@ -1,3 +1,3 @@
-@import "generic/fonts.postcss";
-@import "generic/tailwind.postcss";
-@import "generic/utilities.postcss";
+@import 'generic/fonts.postcss';
+@import 'generic/tailwind.postcss';
+@import 'generic/utilities.postcss';
