feat: update utilities

--- a/src/styles/generic/utilities.postcss
+++ b/src/styles/generic/utilities.postcss
@@ -8,7 +8,7 @@
   }
 
   .link {
-    @apply opacity-80 transition-opacity hover:opacity-100;
+    @apply relative;
   }
 
   .column {
@@ -17,5 +17,9 @@
 
   .list {
     @apply flex flex-col gap-2 list-disc;
+  }
+
+  .absolute-center {
+    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
   }
 }
